--- a/faster_rcnn/unit_test.ipynb
+++ b/faster_rcnn/unit_test.ipynb
@@ -27,12 +27,63 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Load Pretrained ResNet101"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n",
+      "model exists. loading at: resnet101-5d3b4d8f.pth\n"
+     ]
+    }
+   ],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "\n",
+    "import torch.nn as nn\n",
+    "from config import Config as cfg\n",
+    "from resnet import resnet_loader\n",
+    "\n",
+    "resnet = resnet_loader(arch='resnet101', pretrained=True)\n",
+    "\n",
+    "cnn1 = nn.Sequential(\n",
+    "    resnet.conv1,\n",
+    "    resnet.bn1,\n",
+    "    resnet.relu,\n",
+    "    resnet.maxpool,\n",
+    "    resnet.layer1,\n",
+    "    resnet.layer2,\n",
+    "    resnet.layer3\n",
+    ")\n",
+    "# Freeze all pretrained layers\n",
+    "for param in cnn1.parameters():\n",
+    "    param.requires_grad = False\n",
+    "    \n",
+    "cnn2 = nn.Sequential(\n",
+    "    resnet.layer4,\n",
+    "    #nn.AvgPool2d(cfg.POOLING_SIZE) # 7\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Unit Tests for Faster RCNN"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +290,7 @@
       "rois_rpn.shape: torch.Size([2, 128, 4])\n",
       "rois_labels.shape: torch.Size([2, 128])\n",
       "rois_coeffs.shape: torch.Size([2, 128, 84])\n",
-      "rpn_loss: tensor(0.9662, grad_fn=<DivBackward0>)\n"
+      "rpn_loss: tensor(0.9668, grad_fn=<DivBackward0>)\n"
      ]
     }
    ],
@@ -264,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +361,7 @@
     "\n",
     "from classification import Classification\n",
     "\n",
-    "pred_rois_scores, pred_rois_coeffs = Classification().forward(crops)\n",
+    "pred_rois_scores, pred_rois_coeffs = Classification(cnn2).forward(crops)\n",
     "print(\"pred_rois_scores.shape:\", pred_rois_scores.shape)\n",
     "print(\"pred_rois_coeffs.shape:\", pred_rois_coeffs.shape)"
    ]
@@ -324,17 +375,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "model exists. loading at: resnet101-5d3b4d8f.pth\n",
       "rois_rcnn.shape: torch.Size([2, 128, 4])\n",
       "pred_rois_classes.shape: torch.Size([2, 128])\n",
       "pred_rois_coeffs.shape: torch.Size([2, 128, 84])\n",
-      "rcnn_loss: tensor(3.9014, grad_fn=<AddBackward0>)\n"
+      "rcnn_loss: tensor(4.0090, grad_fn=<AddBackward0>)\n"
      ]
     }
    ],
