--- a/faster_rcnn/unit_test.ipynb
+++ b/faster_rcnn/unit_test.ipynb
@@ -32,15 +32,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n",
       "model exists. loading at: resnet101-5d3b4d8f.pth\n"
      ]
     }
@@ -70,7 +68,7 @@
     "    \n",
     "cnn2 = nn.Sequential(\n",
     "    resnet.layer4,\n",
-    "    #nn.AvgPool2d(cfg.POOLING_SIZE) # 7\n",
+    "    nn.AvgPool2d(cfg.POOLING_SIZE) # 7\n",
     ")"
    ]
   },
@@ -83,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +288,7 @@
       "rois_rpn.shape: torch.Size([2, 128, 4])\n",
       "rois_labels.shape: torch.Size([2, 128])\n",
       "rois_coeffs.shape: torch.Size([2, 128, 84])\n",
-      "rpn_loss: tensor(0.9668, grad_fn=<DivBackward0>)\n"
+      "rpn_loss: tensor(0.8887, grad_fn=<DivBackward0>)\n"
      ]
     }
    ],
@@ -315,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -386,20 +384,38 @@
       "rois_rcnn.shape: torch.Size([2, 128, 4])\n",
       "pred_rois_classes.shape: torch.Size([2, 128])\n",
       "pred_rois_coeffs.shape: torch.Size([2, 128, 84])\n",
-      "rcnn_loss: tensor(4.0090, grad_fn=<AddBackward0>)\n"
+      "rcnn_loss: tensor(3.9982, grad_fn=<AddBackward0>)\n"
      ]
     }
    ],
    "source": [
     "%autoreload 2\n",
     "\n",
-    "from model import FasterRCNN\n",
+    "from faster_rcnn import FasterRCNN\n",
     "\n",
     "rois_rcnn, pred_rois_classes, pred_rois_coeffs, rcnn_loss = FasterRCNN().forward(images, gt_boxes, gt_classes)\n",
     "print(\"rois_rcnn.shape:\", rois_rcnn.shape)\n",
     "print(\"pred_rois_classes.shape:\", pred_rois_classes.shape)\n",
     "print(\"pred_rois_coeffs.shape:\", pred_rois_coeffs.shape)\n",
     "print(\"rcnn_loss:\", rcnn_loss)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Backward"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%autoreload 2\n",
+    "\n",
+    "rcnn_loss.backward()"
    ]
   }
  ],
