--- a/faster_rcnn/unit_test.ipynb
+++ b/faster_rcnn/unit_test.ipynb
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -145,8 +145,12 @@
    ],
    "source": [
     "from rpn.anchor_generation import AnchorGeneration\n",
+    "from config import Config as cfg\n",
     "\n",
-    "anchors = AnchorGeneration().generate_all()\n",
+    "anchors = AnchorGeneration(img_size=cfg.IMG_SIZE,\n",
+    "                           stride=cfg.RPN_ANCHOR_STRIDE,\n",
+    "                           scales=cfg.RPN_ANCHOR_SCALES,\n",
+    "                           ratios=cfg.RPN_ANCHOR_RATIOS).generate_all().to(cfg.DEVICE)\n",
     "print(\"anchors.shape:\", anchors.shape, \"dtype\", anchors.type())"
    ]
   },
